crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__head_cell_sunday.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
expression: "snapshot_attrs(&api.head_cell_attrs(Weekday::Sunday))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "head-cell",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Abbr,
            String(
                "Sunday",
            ),
        ),
        (
            Scope,
            String(
                "col",
            ),
        ),
    ],
    styles: [],
}
