crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__header.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
expression: snapshot_attrs(&api.header_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "header",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Id,
            String(
                "cal-header",
            ),
        ),
    ],
    styles: [],
}
