crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__heading.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
expression: snapshot_attrs(&api.heading_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "heading",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Id,
            String(
                "cal-heading",
            ),
        ),
    ],
    styles: [],
}
