crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__prev_trigger_multi_month_visible_step.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
assertion_line: 1047
expression: snapshot_attrs(&api.prev_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "prev-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Previous 2 months",
            ),
        ),
        (
            Id,
            String(
                "cal-prev-trigger",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
